--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=2.0.0",
     "pyyaml>=6.0.0",
     "matplotlib>=3.7.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.optional-dependencies]
