--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dependencies = [
     "tqdm>=4.67.1",
     "orjson>=3.11.4",
     "polars>=1.35.2",
+    "ipykernel>=7.1.0",
+    "seaborn>=0.13.2",
+    "pyarrow>=22.0.0",
+    "jupyter>=1.1.1",
+    "nbconvert>=7.16.6",
 ]
 
 [project.optional-dependencies]
