--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "nbconvert>=7.16.6",
     "statsmodels>=0.14.5",
+    "scikit-learn>=1.7.2",
 ]
 
 [project.optional-dependencies]
