--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "statsmodels>=0.14.5",
     "scikit-learn>=1.7.2",
     "lightgbm>=4.6.0",
+    "optuna>=4.6.0",
 ]
 
 [project.optional-dependencies]
