--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "statsmodels>=0.14.5",
     "scikit-learn>=1.7.2",
     "lightgbm>=4.6.0",
+    "torch>=2.5.0",
+    "gymnasium>=0.29.0",
 ]
 
 [project.optional-dependencies]
